--- a/index.ipynb
+++ b/index.ipynb
@@ -1369,7 +1369,7 @@
    "source": [
     "def derivative_function_trace(terms, x_values):\n",
     "    derivative_terms = find_derivative(terms)\n",
-    "    return fu"
+    "    return function_values_trace"
    ]
   },
   {
