--- a/index.ipynb
+++ b/index.ipynb
@@ -1385,7 +1385,7 @@
    "source": [
     "from plotly import tools\n",
     "import plotly\n",
-    "import .plotly as py\n",
+    "import chart.plotly as py\n",
     "\n",
     "from graph import make_subplots\n",
     "\n",
