Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1384,8 +1384,8 @@
    ],
    "source": [
     "from plotly import tools\n",
-    "import plotly\n",
-    "import chart.plotly as py\n",
+    "import chart-studio\n",
+    "import chart_studio.plotly as py\n",
     "\n",
     "from graph import make_subplots\n",
     "\n",
